<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/half_margin"
    android:paddingBottom="@dimen/half_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/half_margin"
        android:paddingTop="@dimen/half_margin"
        android:gravity="center_vertical|start"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp">

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="2"
            android:textSize="18sp" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="3"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/bad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:text="@string/middle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center" />

        <TextView
            android:text="@string/good"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="com.artioml.practice.views.ResultSeekBar" />
</LinearLayout>