<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_license"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:elevation="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.artioml.practice.activities.LicenseActivity"
    tools:showIn="@layout/activity_license">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/license_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal|bold" />

        <View
            android:id="@+id/lineView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/license_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <Button
            android:text="@string/accept"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/acceptButton"
            android:layout_marginTop="@dimen/button_marginTop"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/button_background_red"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</ScrollView>
