<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.artioml.practice.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <include layout="@layout/content_settings" />

    <!--android:gravity="center_vertical|center_horizontal"-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/punchButton"
            android:layout_width="@dimen/punch_button_size"
            android:layout_height="@dimen/punch_button_size"
            android:background="@drawable/punch_button"
            android:text="@string/hit_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/punch_button_text_size"
            android:textStyle="bold"
            android:typeface="normal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/punch_button_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/communityButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_background_yellow"
                android:text="@string/community"
                android:textAppearance="@style/ButtonTextStyle"
                android:layout_gravity="bottom|center_horizontal" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_background_yellow"
                android:text="@string/history"
                android:textAppearance="@style/ButtonTextStyle"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:layout_gravity="bottom|center_horizontal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
