<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artioml.practice.activities.LoginActivity">

    <include layout="@layout/appbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyDarkest"
                android:hint="@string/enter_username"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:textColorHint="@color/colorGreyDarkest"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColorHighlight="@color/colorGreyDark"/>

            <CheckBox
                android:id="@+id/prevResultsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_previous_results"
                android:textColor="@color/colorTextBlack"
                android:layout_marginLeft="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:layout_marginTop="@dimen/double_small_margin"
                android:gravity="center_vertical"
                android:checked="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/four_small_margin"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:background="@drawable/button_background_red"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>